--- a/wasd-back/package.json
+++ b/wasd-back/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.1",
@@ -9,6 +10,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/uuid": "^8.3.1"
   }
 }
