--- a/wasd-back/package.json
+++ b/wasd-back/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "bcrypt": "^5.0.1",
+    "burner-email-providers": "^1.0.59",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
