--- a/wasd-form/package.json
+++ b/wasd-form/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@types/react": "^17.0.19",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "next": "11.1.0",
     "next-redux-wrapper": "^7.0.2",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
