--- a/wasd-form/package.json
+++ b/wasd-form/package.json
@@ -11,14 +11,27 @@
     "@types/react": "^17.0.19",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "draft-js": "^0.11.7",
+    "editor-js": "^0.1.1",
     "next": "11.1.0",
     "next-redux-wrapper": "^7.0.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "17.0.2",
+    "react-editor-js": "^1.10.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.4.2"
+  },
+  "devDependencies": {
+    "@editorjs/code": "^2.7.0",
+    "@editorjs/embed": "^2.4.6",
+    "@editorjs/header": "^2.6.1",
+    "@editorjs/image": "^2.6.1",
+    "@editorjs/link": "^2.3.1",
+    "@editorjs/list": "^1.6.2",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/table": "^2.0.1"
   }
 }
