--- a/wasd-form/package.json
+++ b/wasd-form/package.json
@@ -8,10 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@types/react": "^17.0.19",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "editor-js": "^0.1.1",
     "next": "11.1.0",
     "next-redux-wrapper": "^7.0.2",
@@ -32,6 +36,7 @@
     "@editorjs/link": "^2.3.1",
     "@editorjs/list": "^1.6.2",
     "@editorjs/quote": "^2.4.0",
-    "@editorjs/table": "^2.0.1"
+    "@editorjs/table": "^2.0.1",
+    "@types/draft-js": "^0.11.5"
   }
 }
