--- a/wasd-form/package.json
+++ b/wasd-form/package.json
@@ -11,12 +11,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@types/dompurify": "^2.2.3",
     "@types/react": "^17.0.19",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "dompurify": "^2.3.1",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "editor-js": "^0.1.1",
+    "html-to-react": "^1.4.5",
     "next": "11.1.0",
     "next-redux-wrapper": "^7.0.2",
     "react": "17.0.2",
