--- a/wasd-back/package.json
+++ b/wasd-back/package.json
@@ -1,17 +1,22 @@
 {
   "dependencies": {
     "@types/express": "^4.17.13",
+    "aws-sdk": "^2.989.0",
     "bcrypt": "^5.0.1",
     "burner-email-providers": "^1.0.59",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.1",
+    "multer": "^1.4.3",
+    "multer-s3": "^2.9.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^2.7.10",
     "@types/uuid": "^8.3.1"
   }
 }
