--- a/wasd-form/package.json
+++ b/wasd-form/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
