--- a/wasd-form/package.json
+++ b/wasd-form/package.json
@@ -20,6 +20,7 @@
     "draft-js-export-html": "^1.4.1",
     "editor-js": "^0.1.1",
     "html-to-react": "^1.4.5",
+    "moment": "^2.29.1",
     "next": "11.1.0",
     "next-redux-wrapper": "^7.0.2",
     "react": "17.0.2",
