--- a/wasd-back/package.json
+++ b/wasd-back/package.json
@@ -10,6 +10,7 @@
     "mongoose": "^6.0.1",
     "multer": "^1.4.3",
     "multer-s3": "^2.9.0",
+    "redis": "^3.1.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -17,6 +18,7 @@
     "@types/cors": "^2.8.12",
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "^2.7.10",
+    "@types/redis": "^2.8.32",
     "@types/uuid": "^8.3.1"
   }
 }
