--- a/wasd-form/package.json
+++ b/wasd-form/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@paypal/react-paypal-js": "^7.3.3",
     "@types/dompurify": "^2.2.3",
     "@types/react": "^17.0.19",
     "axios": "^0.21.1",
@@ -20,9 +21,11 @@
     "draft-js-export-html": "^1.4.1",
     "editor-js": "^0.1.1",
     "html-to-react": "^1.4.5",
+    "i": "^0.3.7",
     "moment": "^2.29.1",
     "next": "11.1.0",
     "next-redux-wrapper": "^7.0.2",
+    "npm": "^8.0.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "17.0.2",
