--- a/wasd-form/package.json
+++ b/wasd-form/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@draft-js-plugins/drag-n-drop": "^4.2.1",
     "@draft-js-plugins/drag-n-drop-upload": "^4.1.1",
+    "@draft-js-plugins/editor": "^4.1.0",
     "@draft-js-plugins/focus": "^4.1.2",
     "@draft-js-plugins/image": "^4.1.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
