--- a/wasd-form/package.json
+++ b/wasd-form/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@hcaptcha/react-hcaptcha": "^0.3.7",
     "@paypal/react-paypal-js": "^7.3.3",
     "@types/dompurify": "^2.2.3",
     "@types/react": "^17.0.19",
