--- a/wasd-form/package.json
+++ b/wasd-form/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@hcaptcha/react-hcaptcha": "^0.3.7",
     "@paypal/react-paypal-js": "^7.3.3",
+    "@sentry/nextjs": "^6.13.3",
     "@types/dompurify": "^2.2.3",
     "@types/react": "^17.0.19",
     "axios": "^0.21.1",
