--- a/wasd-back/Dockerfile
+++ b/wasd-back/Dockerfile
@@ -8,7 +8,7 @@ RUN npm install
 RUN npm install typescript
 ADD . /usr/src/app
 
-RUN npm run tsc
+RUN tsc --build
 
 CMD [ "npm", "start" ]
-EXPOSE 7001
+EXPOSE 80
