--- a/wasd-back/package.json
+++ b/wasd-back/package.json
@@ -20,6 +20,11 @@
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "^2.7.10",
     "@types/redis": "^2.8.32",
-    "@types/uuid": "^8.3.1"
+    "@types/uuid": "^8.3.1",
+    "typescript": "^4.4.4"
+  },
+  "scripts": {
+    "start": "NODE_PATH=./build node build/index.js",
+    "build": "tsc -p ."
   }
 }
