--- a/wasd-form/package.json
+++ b/wasd-form/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3000"
   },
   "dependencies": {
     "@draft-js-plugins/drag-n-drop": "^4.2.1",
