--- a/wasd-form/package.json
+++ b/wasd-form/package.json
@@ -24,7 +24,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "dompurify": "^2.3.1",
-    "dotenv": "^10.0.0",
+    "dotenv-webpack": "^7.0.3",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "editor-js": "^0.1.1",
